# sport-image-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  index.html  pyproject.toml  script.js  style.css
app/: main.py  requirements.txt
app/static/: style.css
app/templates/: index.html
static/: script.js
train/: train.ipynb  train.py
